[package]
name = "zilliqa-rs-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.35.1"
zilliqa-rs = {git = "https://github.com/Zilliqa/zilliqa-rs.git", branch = "use-scilla-parser-from-crates-io"}
